Fix gap between menu icon and text

--- a/sass/site/_nav.scss
+++ b/sass/site/_nav.scss
@@ -79,7 +79,6 @@ transition: transform  $transition;
 	}
 
 	&-icon {
-		display: block;
 		width: 1rem;
 		height: 1rem;
 		margin: 0 auto 0.2rem;
